# SDGym

./: .gitignore  .travis.yml  AUTHORS.rst  BENCHMARK.md  CONTRIBUTING.rst  DATASETS.md  DOCKER.md  Dockerfile  HISTORY.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SYNTHESIZERS.md  eva.sh  issue.py  latest_requirements.txt  launcher.py  log.txt  pyproject.toml  readme.md  requirements.txt  run.sh  setup.cfg  setup.py  static_code_analysis.txt  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: _run_benchmark.yml  dependency_checker.yml  docs.yml  install.yml  integration.yml  lint.yml  minimum.yml  prepare_release.yml  readme.yml  release.yml  run_benchmark.yml  run_benchmark_from_config.yml  run_benchmark_manual.yml  run_benchmark_multi_table.yaml  run_benchmark_multi_table.yml  run_benchmark_single_table.yml  test_run_benchmark_from_config.yml  test_run_benchmark_manual.yml  tests.yml  unit.yml  upload_benchmark_results.yml  upload_benchmark_results_multi_table.yml  upload_benchmark_results_single_table.yml  windows.yml
Preprocessing/: DPM_C.py
Result_benchmark/: 08-08-2024-AllSynthesizers.csv
additional_datasets/: additional_data.csv
benchmark/: Dockerfile  README.md  run.py
conda/: README.md  meta.yaml
docs/: Makefile  conf.py  index.rst
evaluator/: dataset_summary.py  evaluate.py  summary.py
privbayes/: makefile
privbayes/code/: main_marginal.cpp  main_svm.cpp  methods.cpp  methods.h  noise.cpp  noise.h  printer.cpp  printer.h  table.cpp  table.h  tools.h  translator.cpp  translator.h
rdata_maker/: adult.py  census.py  check_data.py  covtype.py  credit.py  intrusion.py  mnist.py  news.py  utils.py
real_data_process/: mnist.py  utils.py
results/: 0.2.0.csv  0.2.1.dev0.csv  0.2.2.csv  0.2.2.dev0.csv  SDGym-Leaderboard.xlsx
scripts/: README.md  collect.py  release_notes_generator.py  run.sh  submit.sh
scripts/config/: clbn.conf  copulagan.conf  copulas.conf  ctgan.conf  hma1.conf  identity.conf  independent.conf  medgan.conf  par.conf  privbn.conf  sdv.conf  tablegan.conf  tvae.conf  uniform.conf  veegan.conf
sdata_maker/: bivariate.py  multivariate.py  utils.py
sdgym/: __init__.py  __main__.py  _dataset_utils.py  _run_benchmark.py  _upload_benchmark_results.py  benchmark.py  collect.py  data.py  dataset_explorer.py  datasets.py  errors.py  evaluate.py  evaluate.py.bak  leaderboard.csv  metrics.py  progress.py  result_writer.py  results.py  s3.py  summary.py  synthesizer_descriptions.yaml  test.py  utils.py
sdgym-utils/data/real/: adult.py  credit.py
sdgym/_benchmark/: __init__.py  benchmark.py  config_utils.py  credentials_utils.py
sdgym/_benchmark_launcher/: __init__.py  _instance_manager.py  _storage_manager.py  _validation.py  base_benchmark.yaml  benchmark.yaml  benchmark_base.yaml  benchmark_config.py  benchmark_launcher.py  benchmark_multi_table.yaml  benchmark_single_table.yaml  hsa_synthesizer.yaml  independent_synthesizer.yaml  rel-bench-benchmark.yaml  script.py  test_benchmark_config.yaml  utils.py
sdgym/_run_benchmark/: __init__.py  _utils.py  run_benchmark.py  upload_benchmark_results.py
sdgym/_run_benchmark.py/: run_benchmark.py  upload_benchmark_results.py
sdgym/cli/: __init__.py  __main__.py  collect.py  summary.py  utils.py
sdgym/result_explorer/: __init__.py  result_explorer.py  result_handler.py
sdgym/run_benchmark/: __init__.py  run_benchmark.py  upload_benchmark_results.py  utils.py
sdgym/sdgym_result_explorer/: __init__.py  result_explorer.py  result_handler.py
sdgym/synthesizers/: __init__.py  _sdv_dynamic.py  _sdv_lookup.py  base.py  clbn.py  column.py  ctgan.py  generate.py  gretel.py  identity.py  independent.py  medgan.py  privbn.py  realtabformer.py  sdv.py  tablegan.py  tgan.py  tvae.py  uniform.py  utils.py  veegan.py  ydata.py
synthesizer/: clbn_synthesizer.py  gan_synthesizer.py  gmmgan_synthesizer.py  gmmvae_synthesizer.py  greedybn_synthesizer.py  identity_synthesizer.py  independent_synthesizer.py  medgan_synthesizer.py  stdvae_synthesizer.py  synthesizer_base.py  tgan_gm_mlp2_kl_synthesizer.py  tgan_gm_mlp2_synthesizer.py  tgan_gm_mlp_synthesizer.py  tgan_synthesizer.py  tganff_synthesizer.py  tgankl_synthesizer.py  uniform_synthesizer.py  utils.py  vae_synthesizer.py  veegan_synthesizer.py
synthetic_data_benchmark/: utils.py
synthetic_data_benchmark/evaluator/: evaluate.py  summary.py
synthetic_data_benchmark/preprocessing/: DPM_D.py
synthetic_data_benchmark/rdata_maker/: census.py  intrusion.py  mnist.py  news.py
synthetic_data_benchmark/sdata_maker/: bivariate.py  multivariate.py
synthetic_data_benchmark/synthesizer/: bgmgan2_synthesizer.py  bgmgan3_synthesizer.py  bgmgan4_synthesizer.py  bgmgan5_synthesizer.py  bgmgan6_synthesizer.py  bgmgan7_synthesizer.py  bgmgan8_synthesizer.py  bgmgan_synthesizer.py  bgmganpg_synthesizer.py  bgmvae_synthesizer.py  bgmwgan2_synthesizer.py  bgmwgan3_synthesizer.py  bgmwgan_synthesizer.py  clbn_synthesizer.py  gmmgan_synthesizer.py  gmmvae_synthesizer.py  identity_synthesizer.py  medgan_synthesizer.py  privbn_synthesizer.py  synthesizer_base.py  synthesizer_utils.py  tablegan_synthesizer.py  tableganc_synthesizer.py  tableganclass_synthesizer.py  uniform_synthesizer.py  veegan_synthesizer.py
tests/: __init__.py  test_benchmark.py  test_synthesizers.py  test_tasks.py
tests/integration/: __init__.py  test_benchmark.py  test_dataset_explorer.py  test_datasets.py
tests/integration/_benchmark_launcher/: __init__.py
tests/integration/result_explorer/: __init__.py  (+1 more)
tests/synthesizers/: test_utils.py
tests/unit/: __init__.py  test__dataset_utils.py  test_benchmark.py  test_dataset_explorer.py  test_datasets.py  test_result_writer.py  test_s3.py  test_summary.py  test_utils.py
(+108 files in other folders)
